css overflow fix

--- a/css/sass/partials/_areas/_area-settings.scss
+++ b/css/sass/partials/_areas/_area-settings.scss
@@ -17,7 +17,7 @@
 }
 
 .kb-area--body{
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 .kb-area__wrap:hover {
